@@ -1,4 +1,23 @@
-/* Welcome to Narcoleptic. This library allows you to dramatically reduce
+/**
+ * Narcoleptic - A sleep library for Arduino
+ * Copyright (C) 2010 Peter Knight (Cathedrow)
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+*/
+
+/*
+** Welcome to Narcoleptic. This library allows you to dramatically reduce
 ** the power consumption of your Arduino project.
 **
 ** Whilst in a Narcoleptic delay, the CPU current consumption drops from
